More corrections to hand shifts, etc.